hard-gists/6551668/run.log
=== Docker Run Log for 6551668 ===
Started at: Mi 29. Okt 16:37:03 CET 2025

[2025-10-29 16:37:04] START: Running container for 6551668
[2025-10-29 16:37:04] SUCCESS: Container 1610c3482be9e000f917d5e05acd8dbbfe74baff3acb5aba2e74c0a1e25dba17 started for 6551668
=== Container logs for 6551668 ===
  File "/snippet.py", line 15
    print "Usage: %s hostname1 [hostname2] [hostname3] ..." % sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6551668 ===
[2025-10-29 16:37:06] INFO: Container 1610c3482be9e000f917d5e05acd8dbbfe74baff3acb5aba2e74c0a1e25dba17 has stopped
